--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@rebass/preset": "^4.0.5",
     "faker": "^4.1.0",
-    "grommet": "^2.11.1",
-    "grommet-icons": "^4.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-typography": "^0.16.19",
+    "rebass": "^4.0.7",
     "styled-components": "^5.0.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "styled-system": "^5.1.5",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "react-scripts": "^3.4.0",
