--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "faker": "^4.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-typography": "^0.16.19",
     "rebass": "^4.0.7",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
-    "styled-system": "^5.1.5",
-    "typography": "^0.16.19"
+    "styled-spinkit": "^1.0.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "react-scripts": "^3.4.0",
